<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_corner_4_solid_ffffff"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="9dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:padding="5dp"
        android:text="@string/wx_reminder"
        android:textColor="@color/wx_black"
        android:textSize="@dimen/wx_text_size_xll"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textColor="@color/wx_black"
        android:textSize="@dimen/wx_text_size_m" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="107.5dp"
            android:layout_height="36dp"
            android:background="@drawable/border_blue_2dp"
            android:text="@string/wx_cancel"
            android:textColor="@color/wx_action_bar_tittle_color"
            android:textSize="@dimen/wx_text_size_m" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="107.5dp"
            android:layout_height="36dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/bg_corner_2_solid_71b2ff"
            android:text="@string/wx_sure"
            android:textColor="@color/wx_white"
            android:textSize="@dimen/wx_text_size_m" />
    </LinearLayout>
</LinearLayout>